<resources>
    <string name="app_name">Undercover</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">email</string>
    <string name="email_hint">example@gmail.com</string>
    <string name="password">password</string>
    <string name="password_hint">8~13 characters</string>
    <string name="name">name</string>
    <string name="name_hint">홍길동</string>
    <string name="login_button_string">로그인</string>
    <string name="register_button_string">회원가입</string>
    <string name="top_label">top label</string>
    <string name="bottom_label">bottom label</string>

    <string name="edit_information">개인정보 수정</string>
    <string name="travel_option">여행 옵션</string>
    <string name="logout_button_string">로그아웃</string>
    <string name="delete_account"><u>탈퇴하기</u></string>
  
    <string name="money_string">%d원</string>
    <string name="day_string">%dDays</string>

</resources>