<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center|bottom">

        <Button
            android:id="@+id/edit_information_button"
            android:layout_width="190dp"
            android:layout_height="55dp"
            android:background="@drawable/button_round"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/edit_information"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">

        <Button
            android:id="@+id/travel_option_button"
            android:layout_width="190dp"
            android:layout_height="55dp"
            android:background="@drawable/button_round"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/travel_option"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center|top">

        <Button
            android:id="@+id/logout_button"
            android:layout_width="190dp"
            android:layout_height="55dp"
            android:background="@drawable/button_round"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/logout_button_string"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="65dp" />

</LinearLayout>